# nx-examples

./: .angular-cli.json  .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  README.md  WORKSPACE  angular.json  karma.conf.js  karma.conf.ts  nx.json  out.json  package-lock.json  package.json  settings.gradle  tsconfig.base.json  tsconfig.json
.github/workflows/: pr_on_development.yml
apps/app1/: karma.conf.js  tsconfig.app.json
apps/app2/: karma.conf.ts  tsconfig.spec.json  tslint.json
apps/cart/: tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/cart-e2e/: tsconfig.e2e.json  tsconfig.json
apps/java-api/: build.gradle
apps/products/: tsconfig.app.json  tsconfig.json
apps/products-e2e/: tsconfig.e2e.json  tsconfig.json
apps/test-app/: tsconfig.app.json
libs/greeter/: README.md  build.gradle
libs/lib1/: README.md  package.json
libs/lib11/: README.md  package.json
libs/lib111/: README.md  package.json
libs/lib112/: README.md  package.json
libs/lib113/: README.md  package.json
libs/lib114/: README.md  package.json
libs/lib115/: README.md  package.json
libs/lib12/: README.md  package.json
libs/lib121/: README.md  package.json
libs/lib122/: README.md  package.json
libs/lib123/: README.md  package.json
libs/lib124/: README.md  package.json
libs/lib125/: README.md  package.json
libs/lib13/: README.md  package.json
libs/lib131/: README.md  package.json
libs/lib132/: README.md  package.json
libs/lib133/: README.md  package.json
libs/lib134/: README.md  package.json
libs/lib135/: README.md  package.json
libs/lib14/: README.md  (+1 more)
src/: main.ts  tsconfig.app.json
(+746 files in other folders)
